test_suite/tests/ui/duplicate-attribute/rename-ser-rename.stderr
error: duplicate serde attribute `rename`
 --> $DIR/tests/ui/duplicate-attribute/rename-ser-rename.rs:6:13
  |
6 |     #[serde(rename = "y")]
  |             ^^^^^^
